convert to select

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -52,8 +52,8 @@
   "thunderstorm": "Thunderstorm",
   "unknown": "unknown",
   "weekDay": "{date}",
-  "weekToday": "today",
-  "weekTomorrow": "tomorrow",
+  "weekToday": "Today",
+  "weekTomorrow": "Tomorrow",
   "weekWeek": "Week",
   "windSpeed": "Wind"
 }
