Migrate setting bloc update json_Serializer

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -40,11 +40,21 @@
   "humidity": "Humidity",
   "lightRain": "Light rain",
   "lightSnow": "Light snow",
+  "locationSearch": "Search here",
+  "locationSearchGPS": "Add current location",
   "mediumRain": "Medium rain",
   "mediumSnow": "Medium Snow",
   "partlyCloudy": "Mostly Cloudy",
   "selectCityFormCity": "City",
   "selectCityNotSupported": "City not supported",
+  "settingsTemp": "Temperature",
+  "settingsTheme": "Theme",
+  "settingsThemeDarkMode": "Dark mode",
+  "settingsThemeLight": "Light mode",
+  "settingsThemeSystem": "System default",
+  "settingsTitle": "Settings",
+  "settingsUnitLenght": "Unit of length",
+  "settingsUnitLenghtMetric": "Metric",
   "showers": "Showers",
   "sleet": "Sleet",
   "smog": "Smog",
