--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -37,11 +37,21 @@
   "humidity": "Humedad",
   "lightRain": "Llovizna",
   "lightSnow": "Nieve ligera",
+  "locationSearch": " Busca aquí",
+  "locationSearchGPS": "Usa tu ubicación ",
   "mediumRain": "Lluvia",
   "mediumSnow": "Nieve",
   "partlyCloudy": "Intervalos nubosos",
   "selectCityFormCity": "Ciudad",
   "selectCityNotSupported": "Ciudad no soportada",
+  "settingsTemp": "Temperatura",
+  "settingsTheme": "Tema",
+  "settingsThemeDarkMode": "Modo nocturno",
+  "settingsThemeLight": "Modo día",
+  "settingsThemeSystem": "Sistema",
+  "settingsTitle": "Ajustes",
+  "settingsUnitLenght": "Unidad de longitud",
+  "settingsUnitLenghtMetric": "Métrico",
   "showers": "Chubasco",
   "sleet": "Aguanieve",
   "smog": "Esmog",
