--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -37,11 +37,21 @@
   "humidity": "Umidade",
   "lightRain": "Chuva leve",
   "lightSnow": "Neve leve",
+  "locationSearch": "Pesquise aqui",
+  "locationSearchGPS": "Use sua localização",
   "mediumRain": "Chuva",
   "mediumSnow": "Neve",
   "partlyCloudy": "Muitas nuvens",
   "selectCityFormCity": "Cidade",
   "selectCityNotSupported": "Cidade não suportada",
+  "settingsTemp": "Temperatura",
+  "settingsTheme": "Tema",
+  "settingsThemeDarkMode": "Modo noite",
+  "settingsThemeLight": "Modo dia",
+  "settingsThemeSystem": "Sistema",
+  "settingsTitle": "Configurações",
+  "settingsUnitLenght": "Unidade de comprimento",
+  "settingsUnitLenghtMetric": "Métrico",
   "showers": "Pancadas de chuva",
   "sleet": "Aguaneve",
   "smog": "Smog",
