--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -24,6 +24,13 @@
       }
     }
   },
+  "@weekDayAbbr": {
+    "placeholders": {
+      "date": {
+        "type": "DateTime"
+      }
+    }
+  },
   "airPressure": "Pressão Atmosférica",
   "appTitle": "Meta Tempo",
   "cloudy": "Nublado",
@@ -59,6 +66,7 @@
   "thunderstorm": "Trovoada",
   "unknown": "Não encontrado",
   "weekDay": "{date}",
+  "weekDayAbbr": "{date}",
   "weekToday": "hoje",
   "weekTomorrow": "amanhã",
   "weekWeek": "Semana",
