Add link to metaweather

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -68,6 +68,7 @@
   "humidity": "Humidity",
   "lightRain": "Light rain",
   "lightSnow": "Light snow",
+  "localTimeTitle": "Local Time ",
   "locationSearch": "Search here",
   "locationSearchGPS": "Add current location",
   "locationsSaved": "Your locations",
