--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -56,6 +56,7 @@
   "humidity": "Humedad",
   "lightRain": "Llovizna",
   "lightSnow": "Nieve ligera",
+  "localTimeTitle": " Hora Local",
   "locationSearch": " Busca aquí",
   "locationSearchGPS": "Usa tu ubicación ",
   "locationsSaved": "Tus ubicaciones",
