--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -56,6 +56,7 @@
   "humidity": "Umidade",
   "lightRain": "Chuva leve",
   "lightSnow": "Neve leve",
+  "localTimeTitle": "Hora Local",
   "locationSearch": "Pesquise aqui",
   "locationSearchGPS": "Use sua localização",
   "locationsSaved": "Suas  localizações",
